<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_status"
        android:enabled="false"
        android:title="@string/status_connecting"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reconnect"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/menu_reconnect"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_white_18dp"
        android:title="@string/menu_filter"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scroll"
        android:icon="@drawable/ic_vertical_align_bottom_white_24dp"
        android:title="@string/menu_scroll"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_dots_vertical_white_24dp"
        android:title="@string/menu_more"
        android:visible="false"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_grey_24dp"
                android:title="@string/menu_share"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_delete_all"
                android:icon="@drawable/ic_delete_grey_24dp"
                android:title="@string/menu_delete_all"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>
